--- a/index.html
+++ b/index.html
@@ -1,10 +1,185 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>你好，GitHub</title>
-  </head>
-  <body>
-    <h1>106598052</h1>
-  </body>
+<html lang="zh-Hant-TW">
+    <!-- 
+    if(!pain){
+        gain = null;
+    }
+    -->
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="keywords" content="Ivan Wang,Bo Jiun Wang,王博駿,bobo8347,bobo8347@gmail.com,101590340,105598012">
+        <meta name="description" content="Hi, This is Ivan's resume. If you want to know more detail, please kindly contact me!">
+        <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
+        <meta http-equiv="EXPIRES" content="0">
+        <meta name="google-site-verification" content="STt3D2RJYMm2Bv3wBruUUfgTswUkdq7UJyKuKdzNUOM" />
+        <title>Andrew Chang | 張家豪</title>
+        <link rel="stylesheet" href="./css/bootstrap.css">
+        <link rel="stylesheet" href="./css/blog.css">
+        <link rel="stylesheet" href="./css/open-iconic-bootstrap.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
+        <link rel="icon" type="image/x-icon" sizes="192x192" href="./images/icon.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="192x192" href="./images/icon.png">
+    </head>
+
+    <body>
+        <div class="blog-masthead">
+            <div class="container">
+                <nav class="nav">
+                    <a class="nav-link active" href="#">Introduction</a>
+                </nav>
+            </div>
+        </div>
+        <div class="blog-header">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-4 col-md-4 col-sm-6">
+                        <img src="./images/photo.png" class="img-thumbnail rounded-circle" width="160" height="200">
+                    </div>
+                    <div class="col-8 col-md-8 col-sm-8 mx-auto">
+                        <h1 class="blog-title">張家豪 Chia Hao Chang
+                            <br>
+                            (Andrew Chang)
+                            <span class="oi oi-bug" data-toggle="tooltip" data-placement="right" title="Yes, I'm a bug..."></span>
+                        </h1>
+                        <div class="clearfix"></div>
+                        <p class="lead blog-description">
+                            <em>
+                                Everyone is a star and deserves the right to twinkle.
+                                <br>
+                                - Marilyn Monroe
+                            </em>
+                        </p>
+                        <div class="clearfix"></div>
+                        <p class="lead blog-description">
+                            <a href="https://github.com/106598052/106598052.github.io/blob/master/Resume.pdf">View PDF of Resume</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="blog-post">
+                        <h2 class="blog-post-title text-info"><span class="oi oi-book">&nbsp;</span>Education</h2>
+                        <hr>
+                        <table class="table table-hover table-responsive-md text-center">
+                            <thead class="table-success">
+                                <tr>
+                                    <th>School</th>
+                                    <th>Major</th>
+                                    <th>Degree</th>
+                                    <th>Period</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><a href="//www.ntut.edu.tw" target="_blank" style="white-space:nowrap;">National Taipei University of Technology<br>國立臺北科技大學(Taipei Tech)</a></td>
+                                    <td>Computer Science &amp; Information Engineering</td>
+                                    <td>Master&ensp;<span data-toggle="tooltip" data-placement="top" class="oi oi-book" title="My Thesis: A continuous composition quorum-based multichannel hopping power-saving multicast protocols for dynamic channels in asynchronous cognitive radio networks | 感知網路上適合動態通道之組合連續法團式非同步多通道跳頻省電群播協定
+"></span></a></td>
+                                    <td>2017/09 - 2019/06</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="http://www.scu.edu.tw/" target="_blank" style="white-space:nowrap;">Soochow University<br>東吳大學</a></td>
+                                    <td>Computer Science &amp; Information Management</td>
+                                    <td>Bachelor</td>
+                                    <td>2012/09 - 2016/06</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="http://www.sish.ntpc.edu.tw/" target="_blank" style="white-space:nowrap;">St. Ignatius High School<br>新北市天主教徐匯中學</a></td>
+                                    <td>Diploma</td>
+                                    <td>2009/09 - 2012/06</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="pull-right">
+                            <a href="#"><span class="oi oi-arrow-circle-top"></span></a>
+                        </div>
+                    </div>
+                    <div class="blog-post">
+                        <h2 class="blog-post-title text-info"><span class="oi oi-briefcase"></span>&nbsp;Experience</h2>
+                        <hr>
+                        <table class="table table-hover table-responsive-md text-center">
+                            <thead class="table-success">
+                                <tr>
+                                    <th>Company</th>
+                                    <th>Job title</th>
+                                    <th>Period</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><a href="https://www.sunmerry.com.tw/" target="_blank" style="white-space:nowrap;">歐立食品股份有限公司</a></td>
+                                    <td>工讀生<br>(Part-time)</td>
+                                    <td>2012/03 - 2016/06</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="http://w3.t-seed.com/" target="_blank" style="white-space:nowrap;">T-Seed<br>育學資訊股份有限公司</a></td>
+                                    <td>系統開發處實習生<br>(Application Team Intern)</td>
+                                    <td>2014/12 - 2015/12</td>
+                                </tr>
+                                <tr>
+                                    <td><a href="https://www.tact.com.tw/m/" target="_blank" style="white-space:nowrap;">台灣拓人教育事業股份有限公司麗山分校</a></td>
+                                    <td>數學家教老師<br>(Math Tutor Teacher)</td>
+                                    <td>2017/03 - 2017/12</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="pull-right">
+                            <a href="#"><span class="oi oi-arrow-circle-top"></span></a>
+                        </div>
+                    </div>
+                    <div class="blog-post">
+                        <h2 class="blog-post-title text-info"><span class="oi oi-target"></span>&nbsp;Skills &amp; Interests</h2>
+                        <hr>
+                        <h5>Languages:</h5>
+                        <ul>
+                            <li>Mandarin, English</li>
+                        </ul>
+                        <h5>Programming Skills:</h5>
+                        <ul>
+                            <li>Python</li>
+                            <li>Java, Java Web</li>
+                            <li>SQL</li>
+                        </ul>
+                        <h5>Interests:</h5>
+                        <ul>
+                            <li>Running</li>
+                            <li>Swimming</li>
+                            <li>Watching movies</li>
+                        </ul>
+                        <div class="pull-right">
+                            <a href="#"><span class="oi oi-arrow-circle-top"></span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="blog-footer">
+            <span class="oi oi-envelope-closed"></span>&nbsp;<a href="mailto:msps50807@gmail.com" target="_blank">Gmail</a> |&nbsp;
+            <span class="oi oi-people"></span>&nbsp;<a href="https://www.facebook.com/profile.php?id=100000204416007" target="_blank">Facebook</a> |&nbsp;
+            <span class="oi oi-clipboard"></span>&nbsp;<a href="https://github.com/106598052" target="_blank">Github</a>
+        </footer>
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-105141569-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <script src="./js/jquery-3.3.1.slim.min.js"></script>
+        <script src="./js/popper.min.js"></script>
+        <script src="./js/bootstrap.js"></script>
+        <script src="./js/main.js"></script>
+    </body>
 </html>
