--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-    <!-- 
-    if(!pain){
-        gain = null;
-    }
-    -->
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="keywords" content="Ivan Wang,Bo Jiun Wang,王博駿,bobo8347,bobo8347@gmail.com,101590340,105598012">
-        <meta name="description" content="Hi, This is Ivan's resume. If you want to know more detail, please kindly contact me!">
+        <meta name="keywords" content="Andrew Chang,張家豪,msps50807@gmail.com">
+        <meta name="description" content="Hi, This is Andrew's resume. If you want to know more detail, please kindly contact me!">
         <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
         <meta http-equiv="EXPIRES" content="0">
         <meta name="google-site-verification" content="STt3D2RJYMm2Bv3wBruUUfgTswUkdq7UJyKuKdzNUOM" />
@@ -40,19 +35,19 @@
                         <h1 class="blog-title">張家豪 Chia Hao Chang
                             <br>
                             (Andrew Chang)
-                            <span class="oi oi-bug" data-toggle="tooltip" data-placement="right" title="Yes, I'm a bug..."></span>
+                            <span class="oi oi-sun" data-toggle="tooltip" data-placement="right" title="I hope the weather of my mood is always sunny everyday."></span>
                         </h1>
                         <div class="clearfix"></div>
                         <p class="lead blog-description">
                             <em>
-                                Everyone is a star and deserves the right to twinkle.
+                                If you're afraid to fail, then you're probably going to fail.
                                 <br>
-                                - Marilyn Monroe
+                                - Kobe Bryant
                             </em>
                         </p>
                         <div class="clearfix"></div>
                         <p class="lead blog-description">
-                            <a href="https://github.com/106598052/106598052.github.io/blob/master/Resume.pdf">View PDF of Resume</a>
+                            <a href="https://raw.githubusercontent.com/106598052/106598052.github.io/master/Resume.pdf">View PDF of Resume</a>
                         </p>
                     </div>
                 </div>
@@ -89,6 +84,7 @@
                                 </tr>
                                 <tr>
                                     <td><a href="http://www.sish.ntpc.edu.tw/" target="_blank" style="white-space:nowrap;">St. Ignatius High School<br>新北市天主教徐匯中學</a></td>
+                                    <td>gerneral education</td>
                                     <td>Diploma</td>
                                     <td>2009/09 - 2012/06</td>
                                 </tr>
@@ -111,7 +107,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><a href="https://www.sunmerry.com.tw/" target="_blank" style="white-space:nowrap;">歐立食品股份有限公司</a></td>
+                                    <td><a href="https://www.sunmerry.com.tw/" target="_blank" style="white-space:nowrap;">SUNMERRY<br>歐立食品股份有限公司聖瑪莉</a></td>
                                     <td>工讀生<br>(Part-time)</td>
                                     <td>2012/03 - 2016/06</td>
                                 </tr>
@@ -121,7 +117,7 @@
                                     <td>2014/12 - 2015/12</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="https://www.tact.com.tw/m/" target="_blank" style="white-space:nowrap;">台灣拓人教育事業股份有限公司麗山分校</a></td>
+                                    <td><a href="https://www.tact.com.tw/m/" target="_blank" style="white-space:nowrap;">Taiwan Extension Education Enterprise Co., Ltd.<br>台灣拓人教育事業股份有限公司麗山分校</a></td>
                                     <td>數學家教老師<br>(Math Tutor Teacher)</td>
                                     <td>2017/03 - 2017/12</td>
                                 </tr>
@@ -146,9 +142,9 @@
                         </ul>
                         <h5>Interests:</h5>
                         <ul>
-                            <li>Running</li>
-                            <li>Swimming</li>
-                            <li>Watching movies</li>
+                            <li>Playing basketball</li>
+                            <li>Traveling</li>
+                            <li>Learning</li>
                         </ul>
                         <div class="pull-right">
                             <a href="#"><span class="oi oi-arrow-circle-top"></span></a>
@@ -160,7 +156,7 @@
 
         <footer class="blog-footer">
             <span class="oi oi-envelope-closed"></span>&nbsp;<a href="mailto:msps50807@gmail.com" target="_blank">Gmail</a> |&nbsp;
-            <span class="oi oi-people"></span>&nbsp;<a href="https://www.facebook.com/profile.php?id=100000204416007" target="_blank">Facebook</a> |&nbsp;
+            <span class="oi oi-people"></span>&nbsp;<a href="https://www.facebook.com/msps50807" target="_blank">Facebook</a> |&nbsp;
             <span class="oi oi-clipboard"></span>&nbsp;<a href="https://github.com/106598052" target="_blank">Github</a>
         </footer>
         <script>
