--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 </tr>
                                 <tr>
                                     <td><a href="http://www.sish.ntpc.edu.tw/" target="_blank" style="white-space:nowrap;">St. Ignatius High School<br>新北市天主教徐匯中學</a></td>
-                                    <td>gerneral education</td>
+                                    <td>Gerneral education</td>
                                     <td>Diploma</td>
                                     <td>2009/09 - 2012/06</td>
                                 </tr>
@@ -107,7 +107,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><a href="https://www.sunmerry.com.tw/" target="_blank" style="white-space:nowrap;">SUNMERRY<br>歐立食品股份有限公司聖瑪莉</a></td>
+                                    <td><a href="https://www.sunmerry.com.tw/" target="_blank" style="white-space:nowrap;">Sunmerry<br>歐立食品股份有限公司聖瑪莉</a></td>
                                     <td>工讀生<br>(Part-time)</td>
                                     <td>2012/03 - 2016/06</td>
                                 </tr>
@@ -132,7 +132,9 @@
                         <hr>
                         <h5>Languages:</h5>
                         <ul>
-                            <li>Mandarin, English</li>
+                            <li>Chinese</li>
+                            <li>Taiwanese</li>
+                            <li>English</li>
                         </ul>
                         <h5>Programming Skills:</h5>
                         <ul>
