--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                         <h5>Programming Skills:</h5>
                         <ul>
                             <li>Python</li>
-                            <li>Java, Java Web</li>
+                            <li>Java/Java Web</li>
+                            <li>C/C++/C#</li>
                             <li>SQL</li>
                         </ul>
                         <h5>Interests:</h5>
